# Selective_Recall

./: README.md  pyproject.toml  requirements.txt
benchmarks/: benchmark_attention.py  experiment_accuracy_cost.py
notebooks/: Selective_Recall_accuracy_cost.ipynb  Selective_Recall_benchmark.ipynb  Selective_Recall_capacity.ipynb  Selective_Recall_capacity_law.ipynb  Selective_Recall_experiment.ipynb
scripts/: run_experiment.py  run_sweep.py
selective_recall/: __init__.py  config.py  data.py  experiments.py  models.py  plots.py  train.py
tests/: test_smoke.py
