[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "selective-recall"
version = "0.1.0"
description = "Selective Recall: learning when to attend in a linear-time backbone."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = [
    "attention", "state-space-models", "mamba", "conditional-computation",
    "long-context", "sequence-modeling",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.23",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/your-username/selective-recall"
Issues = "https://github.com/your-username/selective-recall/issues"

[tool.setuptools.packages.find]
include = ["selective_recall*"]
